<resources>
    <string name="app_name">SmartHomeApp</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="preference_file_key">LoginActivityFileValues</string>

    <string name="welcome_message">Welcome to Smart Home App</string>

    <!-- Living Room part add here -->
    <string name="LivingRoomText">Living Room</string>
    <string name="LivingRoomButtonText">Living Room</string>
    <string name="title_livingroom_introduction">Living Room Connected</string>
    <string name="title_livingroomitem_list">Living Room Items
        \u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020
        \u0020\u0020\u0020\u0020\u0020\u0020
        ClickCount</string>
    <string name="title_livingroomitem_detail">Living Room Item Detail</string>
    <string name="help_menu">Help Menu</string>
    <string name="dialog_message">Show Details of This Item ........... or Delete It?</string>
    <string name="dialog_title"> </string>
    <string name="help_header"><b>About This Activity</b></string>
    <string name="help_author">Author: Quan Long</string>
    <string name="help_version">Living Room User Guide version 1.0 </string>
    <string name="help_body"><p>Click the Settings icon (on the left side of this icon) will lead to item list. </p>
                         <br></br><p>Click an item will show its detailed status on the right or in a new page.</p>
                        <p>The frequency of click on this item is recorded as ClickCount, shown besides of the item name.</p>
                        <p>The order of item list is from the most clicked to the least. </p></string>
    <string name="delete_item">Delete (sure?)</string>
    <string name="show_detail">Show Details</string>
    <string name="addItemButton">Add Items</string>
    <string name="color_1">Red</string>
    <string name="color_2">Green</string>
    <string name="color_3">Blue</string>
    <string name="color_4">Yellow</string>

    <!-- Kitchen part add here -->
    <string name="title_activity_kitchen">KitchenActivity</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="ok">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_title">Please give the item number to be deleted:</string>
    <string name="title_activity_microwave">Microwave Control</string>
    <string name="cooking_time">Timer:</string>
    <string name="hint1">00:00</string>
    <string name="microwave_start">Start</string>
    <string name="microwave_stop">Stop</string>
    <string name="microwave_reset">Reset Time</string>
    <string name="time_unit">Min:Sec</string>
    <string name="title_activity_fridge">Fridge and Freezer Control</string>
    <string name="fridge_label">Fridge  Temperature:</string>
    <string name="freezer_label">Freezer Temperature:</string>
    <string name="temp_unit">\u2103</string>
    <string name="fridge_temp_setting">Set Fridge Temperature (\u2103)</string>
    <string name="freezer_temp_setting">Set Freezer Temperature (\u2103)"</string>
    <string name="hint2">+00</string>
    <string name="hint3">-00</string>
    <string name="title_activity_main_light">Main Light Control</string>
    <string name="dimmable">Dimmable</string>
    <string name="off_on">Off/On</string>
    <string name="control">control</string>
    <string name="action_settings">action settings</string>

    <!-- House part add here -->
    <string name="HouseSettingsText">House Settings</string>
    <string name="HouseButtonText">House</string>
    <string name="title_house_activity">House Settings</string>
    <string name="open_house_drawer_message">Open House Settings</string>
    <string name="close_house_drawer_message">Close House Settings</string>
    <string name="house_menu_about">About</string>
    <string name="house_menu_howToUse">How To Use</string>
    <string name="house_back_to_main_button">Back SamrtHome Main</string>
    <string name="house_default_image_description">SmartHouse</string>
    <string name="house_menu_about_details">Version 1.0, by Yu Hou</string>
    <string name="house_menu_default_howtorun">Move figure from left to right to open navigation menu</string>
    <string name="house_garage_options">Garage Options</string>
    <string name="house_garage_door">Garage Door</string>
    <string name="house_garage_light">Garage Light</string>
    <string name="house_menu_garage_howtorun">Open/close Garage Door also turn on/off lights; light can turn on/off separately</string>
    <string name="house_garage_door_description">Garage Door Image</string>
    <string name="house_garage_light_description">Garage Light Image</string>
    <string name="house_garage_status">garagestatus</string>
    <string name="house_weather_add_city">Add City</string>
    <string name="house_weather_remove_city">Remove City</string>
    <string name="house_weather_city_hint">Enter City Name</string>
    <string name="house_weather_icon">Weather Icon Image</string>
    <string name="house_menu_weather_howtorun">Enter name to add/remove city, click city name in the list to display weather</string>
    <string name="house_temp_image_description">House Temperature</string>
    <string name="house_current_temperature">Current Temperature</string>
    <string name="house_temp_enter">Enter Temperature (°C)</string>
    <string name="house_temp_time_enter">Enter Time (HH:MM) (in 24 Hours)</string>
    <string name="house_temperature_schedule_time">Set Schedule</string>
    <string name="house_menu_temperature_howtorun">Enter the temperature，click button to schedule, click item in list to remove</string>

    <!-- Automobile part add here -->
    <string name="AutomobileText">Automobile</string>
    <string name="AutomobileButtonText">Automobile</string>
    <string name="title_activity_automobile">Automobile</string>
    <string name="AutomobileSetting">Settings</string>
    <string name="AutomobileAbout">About</string>
    <string name="title_automobileitem_list">automobileItems</string>
    <string name="title_automobileitem_detail">automobileItem Detail</string>
</resources>
