<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="400dp"
    android:layout_height="400dp">

    <TextView
        android:id="@+id/helpHeader"
        android:text="@string/help_header"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/helpAuthor"
        android:text="@string/help_author"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/helpVersion"
        android:text="@string/help_version"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    <TextView
        android:id="@+id/helpBody"
        android:text="@string/help_body"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/dialogButtonOK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= " Ok "
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp" />

</LinearLayout>