<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_microwave"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.cst2335.proj.MicrowaveActivity"
    tools:showIn="@layout/activity_microwave">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/cooking_time"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/cookingtime"
        android:layout_alignBottom="@+id/time_number"
        android:layout_alignTop="@+id/time_number" />
    <EditText
        android:id="@+id/time_number"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/cookingtime"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"
        android:hint="@string/hint1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/time_unit"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/timeunit"
        android:layout_toRightOf ="@+id/time_number"
        android:layout_alignBottom="@+id/time_number"
        android:layout_alignTop="@+id/time_number" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microwave_reset"
        android:id="@+id/resetButton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/timeunit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microwave_start"
        android:id="@+id/startButton"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/cookingtime"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microwave_stop"
        android:id="@+id/stopButton"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/cookingtime"
        android:layout_toRightOf="@id/startButton"/>

</RelativeLayout>
