<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_fridge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.bob.cst2335project.FridgeActivity"
    tools:showIn="@layout/activity_fridge">


    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/fridge_label"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/fridge_temp_label"
        android:layout_alignTop="@+id/fridge_temp" />
    <TextView
        android:id="@+id/fridge_temp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/fridge_temp_label"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"
        android:hint="@string/hint2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/temp_unit"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/temp_unit"
        android:layout_toRightOf ="@+id/fridge_temp"
        android:layout_alignBottom="@+id/fridge_temp"
        android:layout_alignTop="@+id/fridge_temp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/temp_unit"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/temp_unit2"
        android:layout_toRightOf ="@+id/freezer_temp"
        android:layout_alignBottom="@+id/freezer_temp"
        android:layout_alignTop="@+id/freezer_temp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/freezer_temp_setting"
        android:id="@+id/freezer_setting"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/freezer_label"
        android:textColor="@android:color/holo_blue_dark"
        android:id="@+id/freezer_temp_label"
        android:layout_alignBottom="@+id/freezer_temp"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/freezer_seekbar"
        android:progress="50"
        android:layout_below="@+id/freezer_setting"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/fridge_temp_setting"
        android:id="@+id/fridge_setting"
        android:layout_marginTop="34dp"
        android:layout_below="@+id/fridge_temp_label"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/freezer_temp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"
        android:hint="@string/hint3"
        android:layout_marginBottom="18dp"
        android:layout_above="@+id/freezer_setting"
        android:layout_toEndOf="@+id/freezer_temp_label" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="50"
        android:id="@+id/fridge_seekbar"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/fridge_setting"
        android:layout_alignParentStart="true" />

</RelativeLayout>
