<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cst2335.proj.StartActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LivingRoomButtonText"
        android:id="@+id/LivingRoomButton"
        android:layout_below="@+id/welcomeTextView"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KitchenButtonText"
        android:id="@+id/KitchenButton"
        android:layout_marginStart="30dp"
        android:layout_alignBaseline="@+id/LivingRoomButton"
        android:layout_alignBottom="@+id/LivingRoomButton"
        android:layout_toEndOf="@+id/LivingRoomButton" />

    <Button
        android:text="@string/HouseButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/HouseButton"
        android:layout_below="@+id/LivingRoomButton"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/KitchenButton" />

    <Button
        android:text="@string/AutomobileButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/HouseButton"
        android:layout_alignStart="@+id/KitchenButton"
        android:id="@+id/AutomobileButton"
        android:layout_alignEnd="@+id/KitchenButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:id="@+id/welcomeTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="71dp" />
</RelativeLayout>
