<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.longquan.smart_home.LivingRoomItemDetailFragment">

    <TextView
        android:id="@+id/lamp_3_textview"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textIsSelectable="true" />

    <TextView
        android:id="@+id/lamp_3_seekbar_textview"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Brightness = "
        android:padding="16dp"
        android:textIsSelectable="true" />

    <SeekBar
        android:id="@+id/lamp_3_seekbar"
        android:name="brightness"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/lamp_3_color_textview"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textIsSelectable="true" />

    <!--<GridView
        android:id="@+id/lamp_3_gridView"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:columnWidth="100dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"/>-->
    <GridLayout
        android:rowCount="2"
        android:columnCount="2"
        android:id="@+id/color_grid"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.longquan.lab1.ListItemsActivity"
        tools:showIn="@layout/activity_list_items"-->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorButton_1"
            android:text="@string/color_1"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@android:color/holo_red_light" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorButton_2"
            android:text="@string/color_2"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@android:color/holo_green_dark" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorButton_3"
            android:text="@string/color_3"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@android:color/holo_blue_bright" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/colorButton_4"
            android:text="@string/color_4"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@android:color/holo_orange_light" />

    </GridLayout>

</LinearLayout>